@@ -15,6 +15,7 @@ public:
   string fName;
   string fNuisanceParameter;
   string fTitle;
+  string fCategory;
   
   float fNominal;
   float fMin;
