@@ -32,6 +32,7 @@ Job: "ttH2015"
 %   StatOnly: TRUE
 %   WorkspaceFileName: "ttH2015/RooStats/ttH2015_combined_ttH2015_model.root"
   SystCategoryTables: TRUE
+%   HideNP: SigXsecOverSM
   
 % --------------- %
 % ---  FIT    --- %
@@ -169,6 +170,7 @@ NormFactor: "SigXsecOverSM"
   Min: -10
   Max: 10
   Samples: ttH
+  Category: Theory
   
 NormFactor: "muLumi"
   Nominal: 1
